--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrousel</title>
 
+    <script defer src="./script.js"></script>
+
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <!-- CARROUSEL -->
     <div id="carrousel">
         <div id="container">
-
         </div>
         <img src="./img/chevron.png" alt="chevron" class="bouton" id="g">
         <img src="./img/chevron.png" alt="chevron" class="bouton" id="d">
